examples/appserver/dotnet.svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: dotnet-svc
  labels:
    app: dotnet
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: dotnet
