examples/appserver/webapi.svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: webapi-svc
  labels:
    app: webapi
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: webapi
